--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<button type="submit">Soumettre</button>
+<button type="submit" id="sub">Soumettre</button>
 <input type="checkbox">
 
 <span id="clignote">Ceci est un span qui clignote</span>
@@ -56,6 +56,16 @@
     <li>moutarde</li>
     <li>huile</li>
 </ul>
+<button id="ingredient">Ajouter un ingrédient</button>
+
+<select name="option" id="options">
+    <option value="Option 1">Option 1</option>
+    <option value="Option 2"> Option 2</option>
+</select>
+
+<p id="underline">Un texte souligné</p>
+
+<input type="text" id="input" value="texte du champ">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="app.js"></script>
